packages/survey-creator-core/src/components/question.scss
/* ... */
.sd-panel {
  .svc-row {
    margin-top: var(--sjs2-spacing-x100, 8px);
  }

  .svc-row:first-of-type {
    margin-top: 0;
  }

  .svc-row .sd-row {
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
  }
}

.svc-question__content.svc-question__content--collapsed {
  .sd-element--complex > .sd-element__header--location-top {
    &.svc-element__header--hidden {
      padding: 0;
    }
  }
}

.svc-question__content:not(.svc-question__content--composite-question) {
  .sd-element--complex > .sd-element__header--location-top {
    padding-bottom: calc(0.5 * var(--sd-base-vertical-padding));
    padding-top: 0;
  }

  .sd-panel__content {
    gap: 0;
    padding-top: 0;
  }
}

.svc-question__content {
  .sd-element--complex > .sd-element__header--location-top {
    &.svc-element__header--hidden {
      padding-bottom: var(--sjs2-spacing-x100, 8px);
    }

    &:after {
      display: none;
    }
  }

  .sd-table__cell--detail-panel .sd-panel__content {
    padding-top: var(--sjs2-spacing-x100, 8px);
  }

  .sd-paneldynamic__panel-wrapper {
    padding: 0;
  }

  // .sd-table__cell--actions {
  //   .sv-action-bar-item:disabled {
  //     background: $background;
  //     opacity: var(--sjs2-opacity-visible);

  //     use {
  //       fill: $foreground-light;
  //     }
  //   }
  // }

  .sd-table__row-disabled > .sd-table__cell {
    opacity: var(--sjs2-opacity-visible);
  }
}

.svc-question__content:not(.svc-question__content--composite-question) {
  .svc-carry-forward-panel {
    margin-top: var(--sjs2-spacing-x200, 16px);
  }

  .sd-question__content {
    min-width: min(var(--sjs2-size-x800), 100%);
    margin-left: var(--sjs2-spacing-negative-x500, -40px);
    margin-right: var(--sjs2-spacing-negative-x500, -40px);
    padding-left: var(--sjs2-spacing-x500, 40px);
    padding-right: var(--sjs2-spacing-x500, 40px);
    padding-block: var(--sjs2-spacing-x050);
    margin-block: var(--sjs2-spacing-negative-x050);
    overflow-x: auto;
  }

  .sd-question--description-under-input .sd-question__content {
    margin-bottom: var(--sjs2-spacing-negative-x100, -8px);
    padding-bottom: var(--sjs2-spacing-x100, 8px);
  }

  .sd-composite {
    .sd-question__content {
      margin-left: 0;
      margin-right: 0;
      padding-left: 0;
      padding-right: 0;
    }
  }
}

.svc-question__content--paneldynamic {
  .sd-question__content {
    padding-bottom: 2px;
    margin-bottom: -2px;
    padding-top: var(--sjs2-spacing-x100, 8px);
    margin-top: var(--sjs2-spacing-negative-x100, -8px);
  }

  .sd-paneldynamic__panels-container {
    padding-top: var(--sjs2-spacing-x100, 8px);
    margin-top: var(--sjs2-spacing-negative-x100, -8px);
  }
}

.svc-question__adorner {
  .sv-ranking:not(.sv-ranking--select-to-rank) {
    .svc-question__content--ranking {
      .svc-carry-forward-panel {
        margin-top: 0;
      }
    }
  }

  .sv-ranking {
    .sv-ranking__container-placeholder {
      padding-top: var(--sjs2-spacing-x200, 16px);
      padding-bottom: var(--sjs2-spacing-x200, 16px);
    }
  }

  .sv-ranking--select-to-rank-vertical {
    .sv-ranking__container--empty {
      padding-top: 0;
      padding-bottom: 0;
    }

    .sv-ranking__container--from {
      .sv-ranking__container-placeholder {
        padding-bottom: var(--sjs2-spacing-x300, 24px);
      }
    }
  }
}

.svc-question__top-actions {
  padding: var(--sjs2-spacing-x050, 4px);
  position: absolute;
  top: 0;
  right: 0;
  visibility: hidden;
}

.svc-question__adorner--collapse-onhover.svc-hovered > .svc-question__content,
.svc-question__adorner--collapse-onhover > .svc-question__content--selected,
.svc-question__adorner--collapse-always > .svc-question__content {
  & > .svc-question__drag-area > .svc-question__top-actions {
    visibility: visible;
  }
}

.sd-row--enter.sd-row--enter.sd-row--enter.sd-row--enter {
  .svc-question__content--selected {
    box-shadow: var(--sjs2-border-effect-surface-default);

    .svc-question__content-actions {
      opacity: var(--sjs2-opacity-hidden);
    }
  }
}

.sd-panel {
  .sd-row--enter.sd-row--enter.sd-row--enter.sd-row--enter {
    .svc-question__content--selected {
      border-radius: 0;
      border: var(--sjs2-border-width-x100, 1px) dashed var(--sjs2-color-border-basic-secondary);
      box-shadow: none;
    }
  }
}

.svc-question__content--slider.svc-question__content--slider .sd-question__content {
  overflow-x: visible;
}

